objects/ININ_Solution_Components__c.object
<CustomObject>
    <fields>
        <fullName>Component_Function_Cloud__c</fullName>
        <label>Component Function Cloud</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Component_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASR Server</fullName>
                </value>
                <value>
                    <fullName>IC Server (XXLarge, 10k)</fullName>
                </value>
                <value>
                    <fullName>IC Server (XLarge, 4k)</fullName>
                </value>
                <value>
                    <fullName>IC Server (Large, 2.5k)</fullName>
                </value>
                <value>
                    <fullName>IC Server (Medium, 1k)</fullName>
                </value>
                <value>
                    <fullName>Development IC Server</fullName>
                </value>
                <value>
                    <fullName>Development IC Server (w/Dialer)</fullName>
                </value>
                <value>
                    <fullName>Development CCS Server</fullName>
                </value>
                <value>
                    <fullName>Custom Web Server</fullName>
                </value>
                <value>
                    <fullName>Dialer Campaign Server</fullName>
                </value>
                <value>
                    <fullName>GWFM ETL Database Server</fullName>
                </value>
                <value>
                    <fullName>GWFM ETL Server</fullName>
                </value>
                <value>
                    <fullName>GWFM Server / Web</fullName>
                </value>
                <value>
                    <fullName>Intelligent Automation - Integration Hub</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics DB Server</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics Fetcher/Uconnector</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics Web Server</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics Recognition Server</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics Exploration Server</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics Indexer Server</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics ElasticSearch Master</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics ElasticSearch Data</fullName>
                </value>
                <value>
                    <fullName>Interaction Web Portal</fullName>
                </value>
                <value>
                    <fullName>Marquee Server</fullName>
                </value>
                <value>
                    <fullName>Interaction Web Portal / Marquee</fullName>
                </value>
                <value>
                    <fullName>Dev Off-Server Session Manager (OSSM) Server</fullName>
                </value>
                <value>
                    <fullName>Off-Server Session Manager for PCC (OSSM)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Read-Only DB</fullName>
                </value>
                <value>
                    <fullName>Remote Content Server</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component_Function__c</fullName>
        <label>Component Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Component_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analog to SIP FXO/FXS</fullName>
                </value>
                <value>
                    <fullName>ASR Server</fullName>
                </value>
                <value>
                    <fullName>ASR Server - MRCP - VM</fullName>
                </value>
                <value>
                    <fullName>CIC Database Server</fullName>
                </value>
                <value>
                    <fullName>CIC Database Server - VM (Standard)</fullName>
                </value>
                <value>
                    <fullName>CIC Server</fullName>
                </value>
                <value>
                    <fullName>CIC Server - VM (Extra Large)</fullName>
                </value>
                <value>
                    <fullName>CIC Server - VM (Large)</fullName>
                </value>
                <value>
                    <fullName>CIC Server - VM (Medium)</fullName>
                </value>
                <value>
                    <fullName>CIC Server - VM (Small)</fullName>
                </value>
                <value>
                    <fullName>CIC Server w/ IPA - VM (Extra Large)</fullName>
                </value>
                <value>
                    <fullName>CIC Server w/ IPA - VM (Large)</fullName>
                </value>
                <value>
                    <fullName>CIC Server w/ IPA - VM (Medium)</fullName>
                </value>
                <value>
                    <fullName>CIC Server w/ IPA - VM (Small)</fullName>
                </value>
                <value>
                    <fullName>Custom Web Server</fullName>
                </value>
                <value>
                    <fullName>Dialer Campaign Server</fullName>
                </value>
                <value>
                    <fullName>Dialer Campaign Server - VM (Large)</fullName>
                </value>
                <value>
                    <fullName>Dialer Campaign Server - VM (Medium)</fullName>
                </value>
                <value>
                    <fullName>Dialer Campaign Server - VM (Small)</fullName>
                </value>
                <value>
                    <fullName>Director Server</fullName>
                </value>
                <value>
                    <fullName>Gateway Assesories</fullName>
                </value>
                <value>
                    <fullName>GWFM Config Management Framework</fullName>
                </value>
                <value>
                    <fullName>GWFM PS Connector</fullName>
                </value>
                <value>
                    <fullName>GWFM Server</fullName>
                </value>
                <value>
                    <fullName>GWFM Web</fullName>
                </value>
                <value>
                    <fullName>Headsets</fullName>
                </value>
                <value>
                    <fullName>Intelligent Automation - Integration Hub</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics - PS Connector</fullName>
                </value>
                <value>
                    <fullName>Interaction Monitor</fullName>
                </value>
                <value>
                    <fullName>Interaction Web Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Solution_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Server (Physical)</fullName>
                    <default>true</default>
                    <label>Server (Physical)</label>
                </value>
                <value>
                    <fullName>Server (Virtual Machine)</fullName>
                </value>
                <value>
                    <fullName>VoIP SIP Gateway/Router</fullName>
                </value>
                <value>
                    <fullName>Session Boarder Controller</fullName>
                </value>
                <value>
                    <fullName>SIP IP Endpoints</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Site__c.New_Solution_Design__c</field>
                <operation>equals</operation>
                <valueField>$Source.New_Solution_Design__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Site__c</referenceTo>
        <relationshipLabel>ININ Solution Components</relationshipLabel>
        <relationshipName>ININ_Solution_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Cloud__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Component_Function_Cloud__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10 Rack Mounting Shelves - Bulk Pack for MP-11x</fullName>
                </value>
                <value>
                    <fullName>AudioCodes 405</fullName>
                </value>
                <value>
                    <fullName>AudioCodes 405HD</fullName>
                </value>
                <value>
                    <fullName>AudioCodes 420HD</fullName>
                </value>
                <value>
                    <fullName>AudioCodes 430HD</fullName>
                </value>
                <value>
                    <fullName>AudioCodes 440HD</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 16 CPU / 12GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 16 CPU / 16GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 2 CPU / 4GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 2 CPU / 6GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 4 CPU / 10GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 4 CPU / 6GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 4 CPU / 8GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 8 CPU / 12GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 8 CPU / 16GB RAM</fullName>
                </value>
                <value>
                    <fullName>Connector Box for MediaPack-124D</fullName>
                </value>
                <value>
                    <fullName>EHS Polycom Adapter - NA Only</fullName>
                </value>
                <value>
                    <fullName>Genesys 405</fullName>
                </value>
                <value>
                    <fullName>Genesys 405HD</fullName>
                </value>
                <value>
                    <fullName>Genesys 420HD</fullName>
                </value>
                <value>
                    <fullName>IAS 4.0 360 - Large</fullName>
                </value>
                <value>
                    <fullName>IAS 4.0 360 - Medium</fullName>
                </value>
                <value>
                    <fullName>IAS 4.0 380</fullName>
                </value>
                <value>
                    <fullName>IAS 4.0 380 - Large</fullName>
                </value>
                <value>
                    <fullName>Interaction Edge (0 SPAN)</fullName>
                </value>
                <value>
                    <fullName>Interaction Edge (1 SPAN)</fullName>
                </value>
                <value>
                    <fullName>Interaction Edge (2 SPAN)</fullName>
                </value>
                <value>
                    <fullName>Interaction Edge (4 SPAN)</fullName>
                </value>
                <value>
                    <fullName>Interaction Edge (8 SPAN)</fullName>
                </value>
                <value>
                    <fullName>Interactive SIP Station</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Component_Function__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>10 Rack Mounting Shelves - Bulk Pack for MP-11x</fullName>
                </value>
                <value>
                    <fullName>AudioCodes 405</fullName>
                </value>
                <value>
                    <fullName>AudioCodes 405HD</fullName>
                </value>
                <value>
                    <fullName>AudioCodes 420HD</fullName>
                </value>
                <value>
                    <fullName>AudioCodes 430HD</fullName>
                </value>
                <value>
                    <fullName>AudioCodes 440HD</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 16 CPU / 12GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 16 CPU / 16GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 2 CPU / 4GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 2 CPU / 6GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 4 CPU / 10GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 4 CPU / 6GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 4 CPU / 8GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 8 CPU / 12GB RAM</fullName>
                </value>
                <value>
                    <fullName>CIC VM - 8 CPU / 16GB RAM</fullName>
                </value>
                <value>
                    <fullName>Connector Box for MediaPack-124D</fullName>
                </value>
                <value>
                    <fullName>EHS Polycom Adapter - NA Only</fullName>
                </value>
                <value>
                    <fullName>Genesys 405</fullName>
                </value>
                <value>
                    <fullName>Genesys 405HD</fullName>
                </value>
                <value>
                    <fullName>Genesys 420HD</fullName>
                </value>
                <value>
                    <fullName>IAS 4.0 360 - Large</fullName>
                </value>
                <value>
                    <fullName>IAS 4.0 360 - Medium</fullName>
                </value>
                <value>
                    <fullName>IAS 4.0 380</fullName>
                </value>
                <value>
                    <fullName>IAS 4.0 380 - Large</fullName>
                </value>
                <value>
                    <fullName>Interaction Edge (0 SPAN)</fullName>
                </value>
                <value>
                    <fullName>Interaction Edge (1 SPAN)</fullName>
                </value>
                <value>
                    <fullName>Interaction Edge (2 SPAN)</fullName>
                </value>
                <value>
                    <fullName>Interaction Edge (4 SPAN)</fullName>
                </value>
                <value>
                    <fullName>Interaction Edge (8 SPAN)</fullName>
                </value>
                <value>
                    <fullName>Interactive SIP Station</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Solution_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Solution Design</label>
        <referenceTo>New_Solution_Design__c</referenceTo>
        <relationshipLabel>ININ Solution Components</relationshipLabel>
        <relationshipName>ININ_Solution_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Include additional details that will better describe this solutions components job and functionality.  Include Server Hardware specifications, Diagram Drawings, etc.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Providing_Party_Cloud__c</fullName>
        <label>Providing Party</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Model_Cloud__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ININ Provided</fullName>
                </value>
                <value>
                    <fullName>Customer Provided</fullName>
                </value>
                <value>
                    <fullName>Partner Provided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Providing_Party__c</fullName>
        <label>Providing Party</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Model__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ININ Provided</fullName>
                    <default>true</default>
                    <label>ININ Provided</label>
                </value>
                <value>
                    <fullName>Customer Provided</fullName>
                </value>
                <value>
                    <fullName>Partner Provided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Category__c</fullName>
        <label>Solution Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Server Infrastructure</fullName>
                    <default>true</default>
                    <label>Server Infrastructure</label>
                </value>
                <value>
                    <fullName>SIP Softphone</fullName>
                </value>
                <value>
                    <fullName>Voice Infrastructure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Design__c</fullName>
        <label>Solution Design</label>
        <referenceTo>Solution_Design__c</referenceTo>
        <relationshipLabel>Solution Components</relationshipLabel>
        <relationshipName>ININ_Solution_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Specifications__c</fullName>
        <label>Specifications</label>
        <type>Url</type>
    </fields>
    <label>Solution Component</label>
    <nameField>
        <displayFormat>ISC-{0000000}</displayFormat>
        <label>ININ Solution Components ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ININ Solution Components</pluralLabel>
    <recordTypes>
        <fullName>Cloud</fullName>
        <active>true</active>
        <label>Cloud</label>
    </recordTypes>
    <recordTypes>
        <fullName>OnPremise</fullName>
        <active>true</active>
        <label>OnPremise</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>